数据类型判断

--- a/网络文章尝试/数据类型的判断.html
+++ b/网络文章尝试/数据类型的判断.html
@@ -14,7 +14,7 @@
             'use strict';
 
             var typeArr = ['Array', 'Set', 'Object', 'Number', 'String', 'Null', 'Undefined', 'Boolean', 'Function',
-                'Symbol'
+                'Symbol', 'Date', 'RegExp'
             ];
             var Type = {};
             for (let i = 0, l = typeArr.length; i < l; i++) {
@@ -36,7 +36,7 @@
                             return key.slice(2);
                         }
                     }
-                    return '未知';
+                    return Object.prototype.toString.call(value);
                 }
             });
             // console.info(Type);
