--- a/网络文章尝试/可迭代对象.html
+++ b/网络文章尝试/可迭代对象.html
@@ -162,6 +162,28 @@
                 console.info(val);
             }
         })();
+        (function () {
+            'use strict';
+            var myIterator = {
+                name: 'Bryan',
+                job: 'programmer',
+                condition: 'bachelordom',
+                * [Symbol.iterator]() {
+                    const self = this;
+                    const keys = Object.keys(self);
+                    for (let i = 0, l = keys.length; i < l; i++) {
+                        yield self[keys[i]];
+                    }
+                }
+            };
+
+            for (let val of myIterator) {
+                console.info(val);
+            }
+            // Bryan
+            // programmer
+            // bachelordom
+        })();
     </script>
 </body>
 
